# Koala.AI

./: .example.env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  create_environment.sh  docker-compose.yaml  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.sh  start_airflow.sh
config/: airflow.cfg
cookbook/: web_search_agent.py  web_search_agent_airflow.py
dags/: eg_dag.py  kola_koala_web_search.py
docs/: airflow.md
examples/: agent_a.py  agent_b.py  airflow_demo.py  airflow_demo_simple.py  airflow_test.py  airflow_translator_demo.py  benchmarks.py  compare_executors.py  demo_runner.py  kafka_consumer.py  llm_demo.py  openvino_example.py  openvino_flow_demo.py
examples/data/: demo_input.json
plugins/: setup.py
plugins/koala/: __init__.py  _queue_adapter.py  actions.py  api.py  auth.py  flow.py  guards.py  kafka_adapter.py  llm.py  memory.py  observability.py  output.py  queue_adapter.py  run_repo.py  state_store.py  state_store_postgres.py
plugins/koala/executors/: __init__.py  airflow_executor.py
src/koala/: airflow_adapter.py  api.py  flow.py  ingress.py  llm.py  metrics_server.py  observability.py  orchestrator.py  output.py  pyproject.toml  queue.py  state_store_postgres.py  tools.py
src/koala/executors/: __init__.py  airflow_executor.py  airflow_executor.py.bak
tests/: test_agents.py  test_airflow_executor.py  test_api.py  test_auth.py  test_flow.py  test_hello.py  test_ingress.py  test_integration.py  test_memory.py  test_metrics_server.py  test_observability.py  test_orchestrator.py  test_output_and_queue.py  test_retry.py  test_sdk.py  test_tools.py
